# media-kotlin

./: README.md  build.gradle  config.gradle  settings.gradle
VideoPlayerView/: build.gradle
VideoPlayerView/src/androidTest/java/me/tang/videoplayerview/: ExampleInstrumentedTest.kt
VideoPlayerView/src/main/: AndroidManifest.xml
VideoPlayerView/src/main/java/me/tang/videoplayerview/: PlayerTextureView.kt  VideoPlayerView.kt
VideoPlayerView/src/main/res/values/: attrs.xml  strings.xml  themes.xml
VideoPlayerView/src/main/res/values-night/: themes.xml
VideoPlayerView/src/test/java/me/tang/videoplayerview/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/kotlin/media/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AMediaDecoder.cpp  AMediaDecoder.h  CMakeLists.txt  QueueWindowData - 副本.h  QueueWindowData.h  RGBData.cpp  RGBData.h  WindowData.cpp  WindowData.h  YuvData.cpp  YuvData.h  ffplay.cpp  ffplay.h  looper.cpp  native-lib-ffmpeg-mediacodec.cpp  native-lib.cpp  opensl_io.c  opensl_io.h  threadsafe_queue.h  time_util.h
app/src/main/java/com/kotlin/media/: DeviceSurface.kt  MediaApp.kt
app/src/main/java/com/kotlin/media/data/local/: AppDataBase.kt  BaseDao.kt  VideoDao.kt
app/src/main/java/com/kotlin/media/di/: RoomModule.kt
app/src/main/java/com/kotlin/media/model/bean/: Video.kt
app/src/main/java/com/kotlin/media/ui/base/: OnItemLongClickListener.kt
app/src/main/java/com/kotlin/media/ui/edit/: EditActivity.kt  EditViewModel.kt
app/src/main/java/com/kotlin/media/ui/group/: VideoGroupActivity.kt  VideoGroupFragment.kt  VideoGroupViewModel.kt
app/src/main/java/com/kotlin/media/ui/main/: MainActivity.kt  MainViewModel.kt  MyBindingRecyclerViewAdapter.kt
app/src/main/java/com/kotlin/media/ui/player/: RateListDialogFragment.kt  VideoPlayerActivity.kt  VideoPlayerFragment.kt  VideoPlayerViewModel.kt
app/src/main/java/com/kotlin/media/ui/video/detail/: DetailActivity.kt  DetailViewModel.kt  RateListDialogFragment.kt
app/src/main/java/com/kotlin/media/ui/video/edit/: EditActivity.kt  EditViewModel.kt
app/src/main/java/com/kotlin/media/ui/view/: DragExpandableListView.kt  PlayerTextureView.kt
app/src/main/res/drawable/: ic_baseline_pause_circle_filled_24.xml  ic_baseline_play_circle_filled_24.xml  ic_chevron_right_black_24dp.xml  ic_video_play_black_24dp.xml  selector_video_paused.xml  shape_bg_video.xml  shape_cursor.xml
app/src/main/res/layout/: activity_detail.xml  activity_edit.xml  activity_main.xml  activity_video_group.xml  activity_video_player.xml  fragment_rate_list_dialog_list_dialog.xml  fragment_rate_list_dialog_list_dialog_item.xml  fragment_video_group.xml  fragment_video_player.xml  item_video.xml  item_video_children.xml  item_video_group.xml  item_video_player.xml
app/src/main/res/layout-land/: activity_main.xml  activity_video_group.xml  item_video.xml
app/src/main/res/layout-port/: activity_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/test/java/com/kotlin/media/: ExampleUnitTest.kt
doc/: 屏幕适配.txt
ffplay/: build.gradle
ffplay/src/androidTest/java/me/tang/ffplay/: ExampleInstrumentedTest.kt
ffplay/src/main/: AndroidManifest.xml
ffplay/src/main/cpp/: CMakeLists.txt  QueueWindowData - 副本.cpp  QueueWindowData.cpp  RGBData.cpp  TCPSocket.cpp  TCPSocket.h  common.cpp  common.h  ffplay.cpp  ffplay.h  native-lib.cpp  threadsafe_list.h  time_util.cpp  yuv_util.cpp  yuv_util.h
ffplay/src/main/cpp/libsdl/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_config.h  SDL_endian.h  SDL_error.h  SDL_log.h  SDL_mutex.h  SDL_stdinc.h  SDL_thread.h  SDL_timer.h
ffplay/src/main/java/me/tang/ffplay/: DeviceSurface.kt  FFEvent.kt  FFplay.kt
ffplay/src/main/res/values/: strings.xml  themes.xml
ffplay/src/test/java/me/tang/ffplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
